--- a/index.html
+++ b/index.html
@@ -1,56 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simon-Game</title>
-
-    <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-
-    <!-- CSS link -->
+    <meta charset="utf-8">
+    <title>Simon</title>
     <link rel="stylesheet" href="./css/styles.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 
 <body>
+    <h1 id="level-title">Press A Key to Start</h1>
+    <div class="container">
+        <div lass="row">
 
-    <!-- header section -->
-    <section class="header">
-        <h1>Press Any Key To Start !</h1>
-    </section>
+            <div type="button" id="green" class="btn green">
 
-    <!-- the boxes section -->
-    <section class="boxes">
-        <div class="row row1">
-            <div type="button" id="blue" class="btn blue"></div>
-            <div type="button" id="red" class="btn red"></div>
+            </div>
+
+            <div type="button" id="red" class="btn red">
+
+            </div>
         </div>
-        <div class="row row2">
-            <div type="button" id="yellow" class="btn yellow"></div>
-            <div type="button" id="green" class="btn green"></div>
+
+        <div class="row">
+
+            <div type="button" id="yellow" class="btn yellow">
+
+            </div>
+            <div type="button" id="blue" class="btn blue">
+
+            </div>
+
         </div>
-    </section>
 
-    <!-- how to play section -->
-    <section class="htp">
-        <div class="howtoplay">
-            <ul class="steps">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
-    </section>
+    </div>
 
-    <!-- footer section -->
-    <section class="footer">Made By Xerycks With Frustration</section>
-
+    <div class="footer">
+        <p>Made by Xerycks with Frustration.</p>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./game.js"></script>
 </body>
 
 </html>
 
-<!-- Made By xerycks @ Yugam Studios-->
+<!-- Made By xerycks @ Yugam Studios -->
