--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Simon</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <link rel="shortcut icon" href="../../../xerycks/xerro/Web/Drum-Kit/images/snare.png" type="image/x-icon">
 </head>
 
 <body>
