game restart added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
     </div>
 
+    <button type="submit" class="start">START</button>
+
     <div class="footer">
         <p>Made by Xerycks with Frustration.</p>
     </div>
