--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 id="level">Press A Key to Start</h1>
+    <h1 id="level">Press Start to Play Game.</h1>
     <div class="container">
         <div lass="row">
 
@@ -36,7 +36,17 @@
 
     </div>
 
-    <button type="submit" class="start">START</button>
+    <button type="submit" class="start start1">START</button><br>
+    <button class="btn-d">How To Play ?</button>
+
+    <div class="htp">
+        <p>You just have to memorise the pattern <br>
+            Example <br> Red Blinks - You Press Red <br> Then Blue Blinks - You Press Red then Blue <br>Then Yellow
+            Blinks
+            -
+            You Press Red, Blue and then Yellow <br>
+            Have Fun</p>
+    </div>
 
     <div class="footer">
         <p>Made by Xerycks with Frustration.</p>
